# vllm-server

./: .env.example  README.md  docker-compose-frontend.yaml  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/api/: main.py
backend/app/api/routers/: articles.py  metrics.py  test_router.py
backend/app/modules/ClickhouseDB/: main.py
backend/app/modules/PostgresDB/: __init__.py  main.py
clickhouse_config/: init_database.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/ui/: date-picker.tsx
litellm_config/: litellm_config.yaml
nginx_config/: nginx.conf
postgres_config/: init.sh
vllm_logger/: .dockerignore  Dockerfile  logger.py  main.py  pyproject.toml
vllm_logger/ClickhouseDB/: __init__.py  main.py
